syntax = "proto3";

import "dhfs_serial.proto";

option java_multiple_files = true;
option java_package = "com.usatiuk.dhfs.repository";
option java_outer_classname = "DhfsObjectSyncApi";

package dhfs.sync;

service DhfsObjectSyncGrpc {
  rpc OpPush (OpPushRequest) returns (OpPushReply) {}

  rpc GetObject (GetObjectRequest) returns (GetObjectReply) {}
  rpc CanDelete (CanDeleteRequest) returns (CanDeleteReply) {}

  rpc Ping (PingRequest) returns (PingReply) {}
}

message PingRequest {}

message PingReply {}

message GetObjectRequest {
  dhfs.persistence.JObjectKeyP name = 2;
}

message GetObjectReply {
  dhfs.persistence.ObjectChangelog changelog = 5;
  dhfs.persistence.JDataRemoteDtoP pushedData = 6;
}

message CanDeleteRequest {
  dhfs.persistence.JObjectKeyP name = 2;
  repeated dhfs.persistence.JObjectKeyP ourReferrers = 3;
}

message CanDeleteReply {
  bool deletionCandidate = 2;
  repeated dhfs.persistence.JObjectKeyP referrers = 3;
}

message OpPushRequest {
  repeated OpP msg = 2;
}

message OpPushReply {

}

message OpP {
  bytes serializedData = 1;
}
